Fixed cranky vertical spacing that didn't scale with the font size after I broke it being a jerk

--- a/app/_scss/abstractions/_mixins.scss
+++ b/app/_scss/abstractions/_mixins.scss
@@ -18,6 +18,11 @@ $base-font-size: 18px;
    @return $target / $context + 0em;
 }
 
+@function pxtorem($target) {
+   @if $target == 0 { @return 0 }
+   @return $target / $base-font-size + 0rem;
+}
+
 
 // Official animation shorthand property.
 @mixin animation ($animations...) {
