--- a/app/_scss/base/_base.scss
+++ b/app/_scss/base/_base.scss
@@ -19,7 +19,7 @@ body {
   font-size: normal;
   font-style: normal;
   font-weight: 300;
-  line-height: $base-line-height;
+  line-height: pxtorem($base-line-height);
   font-family: "brandon-grotesque", Helvectica, sans-serif;
   padding: 0;
   margin: 0;
@@ -37,7 +37,7 @@ body {
 
 h1 {
   @include breakpoint($breakpoint-medium-width) {
-    font-size: pxtoem(84px);
+    font-size: pxtorem(84px);
   }
   line-height: pxtoem(95px, 84px);
   font-weight: 100;
@@ -51,7 +51,7 @@ h1 {
 }
 
 h2 {
-  font-size: pxtoem(42px);
+  font-size: pxtorem(42px);
   line-height: pxtoem(58px, 42px);
   letter-spacing: pxtoem(1px, 42px);
   margin-bottom: 0;
@@ -64,11 +64,11 @@ h1 + h2 {
 }
 
 h3 {
-  font-size: $base-line-height;
+  font-size: pxtorem($base-line-height);
   font-style: normal;
   font-weight: 300;
   margin-bottom: 0;
-  margin-top: $base-line-height;
+  margin-top: pxtorem($base-line-height);
 }
 h2 + h3 {
   margin-top: 0;
@@ -77,19 +77,19 @@ h2 + h3 {
 h4 {
   font-weight: bold;
   font-style: italic;
-  line-height: $base-line-height;
-  margin-top: $base-line-height;
+  line-height: pxtorem($base-line-height);
+  margin-top: pxtorem($base-line-height);
   margin-bottom: 0;
 }
 
 p,
 pre {
-  margin-bottom: $base-line-height;
+  margin-bottom: pxtorem($base-line-height);
   margin-top: 0;
 }
 
 .intro {
-  font-size: pxtoem(47px);
+  font-size: pxtorem(47px);
   line-height: pxtoem(58px,47px);
 }
 
@@ -119,11 +119,11 @@ h2 a:visited {
 ul {
   list-style: none;
   padding: 0;
-  margin: 0 0 $base-line-height;
+  margin: 0 0 pxtorem($base-line-height);
 }
 ol {
   padding: 0;
-  margin: 0 0 $base-line-height;
+  margin: 0 0 pxtorem($base-line-height);
 }
 
 blockquote {
