--- a/app/_scss/components/_posts.scss
+++ b/app/_scss/components/_posts.scss
@@ -13,7 +13,7 @@
   @include clearfix();
 }
 .post__meta--full {
-  margin: 0 0 $base-line-height;
+  margin: 0 0 pxtorem($base-line-height);
   border-bottom: 1px solid #CCC;
   @include breakpoint($is-color) {
     border-bottom-color:$super-subtle-text;
